fix: alignment and style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -69,13 +69,10 @@ html {
 body {
   padding: 0;
   font-family: var(--font-body);
-  letter-spacing: 0.02em;
   color: var(--text-color);
   background: var(--bg-color);
   line-height: 1.4;
   min-height: 100vh;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   *::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
